# pulsescribe

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  build_app.sh  build_app.spec  build_dmg.sh  build_windows.ps1  build_windows.py  build_windows.spec  build_windows_light.spec  codecov.yml  config.py  hotkey_daemon.py  installer_windows.iss  menubar.py  notes.txt  overlay.py  prompts.py  pulsescribe_daemon.py  pulsescribe_windows.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_daemon.bat  start_hotkey.command  transcribe.py  whisper_daemon.py
assets/: icon.icns
audio/: __init__.py  recording.py
docs/: BUILDING_MACOS.md  BUILDING_WINDOWS.md  CLI_REFERENCE.md  CONFIGURATION.md  Deepgram.md  KONFIGURATION.md  LOCAL_BACKENDS.md  LOKALE_BACKENDS.md  NETZWERK.md  PLAN_PYSIDE6_OVERLAY.md  SICHERHEIT.md  VISION.md  WINDOWS_ANALYSIS.md  WINDOWS_MVP.md  doc.md
providers/: __init__.py  _client_cache.py  _language.py  _response_utils.py  _transcription_request.py  base.py  deepgram.py  deepgram_stream.py  groq.py  local.py  openai.py
refine/: __init__.py  context.py  llm.py
scripts/: install_hotkey_daemon.sh  install_menubar.sh  install_overlay.sh  karabiner-ptt.json  ptt_start.sh  ptt_stop.sh  uninstall_hotkey_daemon.sh
tests/: __init__.py  conftest.py  temp_tests.py  test_animation.py  test_audio_recording.py  test_buffer_overflow.py  test_build_windows.py  test_cli.py  test_client_cache.py  test_clipboard.py  test_config.py  test_context.py  test_custom_prompts.py  test_daemon_controller.py  test_daemon_hotkeys.py  test_daemon_interim_polling.py  test_daemon_mode.py  test_daemon_status_feedback.py  test_deepgram_stream.py  test_diagnostics.py  test_env.py  test_extraction.py  test_formatting.py  test_history.py  test_history_display.py  test_hold_state.py  test_hotkey.py  test_hotkey_card.py  test_hotkey_format.py  test_hotkey_recording.py  test_hotkey_validation.py  test_hotkey_windows.py  test_ipc.py  test_local_backend_ui.py  test_local_feedback.py  test_log_tail.py  (+46 more)
(+78 files in other folders)
